[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://textures/c.png" type="Texture" id=2]
[ext_resource path="res://textures/game_ower.png" type="Texture" id=3]
[ext_resource path="res://fonts/font01.fnt" type="BitmapFont" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 400, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 37.1611, 493.813 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="floor" type="StaticBody2D" parent="."]

transform/pos = Vector2( 283.478, 957.178 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="floor"]

transform/scale = Vector2( 400, 32 )
texture = ExtResource( 2 )
modulate = Color( 0.25, 0.208984, 0.208984, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="floor"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 4.10114, -924.634 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -416.152, -463.261 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 412.269, -467.362 )
shapes/3/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3

[node name="CollisionShape2D1" type="CollisionShape2D" parent="floor/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="floor/Area2D"]

transform/pos = Vector2( 4.10114, -924.634 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D3" type="CollisionShape2D" parent="floor/Area2D"]

transform/pos = Vector2( -416.152, -463.261 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="floor/Area2D"]

transform/pos = Vector2( 412.269, -467.362 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3

[node name="boxes" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 270, 665.948 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.6, 0.6 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Control" type="Control" parent="Camera2D"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 64.0
margin/right = -8.0
margin/bottom = 24.0

[node name="go" type="Control" parent="Camera2D/Control"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite 2" type="Sprite" parent="Camera2D/Control/go"]

transform/pos = Vector2( 2.99524, -7.07739 )
transform/scale = Vector2( 284.361, 437.862 )
texture = ExtResource( 2 )
modulate = Color( 0.308594, 0.308594, 0.308594, 1 )

[node name="Sprite" type="Sprite" parent="Camera2D/Control/go"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="score" type="Label" parent="Camera2D/Control"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -150.0
margin/top = -251.0
margin/right = 3.0
margin/bottom = -208.0
custom_fonts/font = ExtResource( 4 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="h_score" type="Label" parent="Camera2D/Control"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -150.0
margin/top = -272.0
margin/right = 3.0
margin/bottom = -229.0
custom_fonts/font = ExtResource( 4 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="acc" type="Label" parent="Camera2D/Control"]

visibility/visible = false
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -17.0
margin/top = -272.0
margin/right = 7.0
margin/bottom = -258.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="angle" type="Sprite" parent="Camera2D/Control"]

visibility/opacity = 0.1
transform/pos = Vector2( 0, -287.888 )
transform/scale = Vector2( 129.341, 0.895477 )
texture = ExtResource( 2 )

[node name="Position" type="Position2D" parent="."]

[node name="pos" type="Sprite" parent="Position"]

visibility/opacity = 0.2
texture = ExtResource( 2 )

[node name="pos2" type="Sprite" parent="Position"]

visibility/opacity = 0.05
transform/pos = Vector2( 0, -107 )
texture = ExtResource( 2 )

[connection signal="body_enter" from="floor/Area2D" to="." method="_on_Area2D_body_enter"]


